# logger

./: .gitignore  README.md
backend/: import_all.py  pyproject.toml
backend/logger/: app_entry.py  config.py  database.py  main.py  models.py  schemas.py
backend/logger/routers/: analytics.py  breaks.py  categories.py  chat.py  daily.py  family_rules.py  groups.py  import_csv.py  manual_entries.py  planner.py  projects.py  sessions.py  settings.py  timers.py
backend/logger/services/: analytics_service.py  api_key_service.py  category_normalization.py  chat_context_service.py  chat_query_service.py  chat_tools_service.py  family_service.py  github_service.py  group_service.py  import_service.py  manual_entry_service.py  observation_service.py  planner_service.py  timer_service.py
backend/logger/utils/: csv_utils.py  date_utils.py
docs/: database-schema.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/stores/: chat.ts  drafts.ts  session.ts  theme.ts  timer.ts  timezone.ts  viewDate.ts
frontend/src/lib/utils/: chart.ts  lateNight.ts  markdown.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/analytics/: +page.svelte
frontend/src/routes/chat/: +layout.svelte  +page.svelte
frontend/src/routes/data/: +page.svelte
scripts/: build_app_icon.sh  build_macapp.py  clean_csv_headers.py  clean_csv_headers_kevin.py
scripts/walkthrough/: capture.mjs  package.json  run.sh  seed_demo_data.py
(+43 files in other folders)
